Bug 1741431 - fix Save Link As... for plain text files when download improvements pref is enabled r=mtigley

Differential Revision: https://phabricator.services.mozilla.com/D134477